# btsdatapy

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/btsdatapy/_core/: clients.py  constants.py  models.py
src/btsdatapy/_core/aviation/: airline_otp.py  lookup.py
src/btsdatapy/_core/utils/: obfuscation.py
src/btsdatapy/aviation/: airline_otp.py
src/btsdatapy/core/: cache.py  clients.py  config.py  constants.py  fetch.py  models.py  utils.py
src/btsdatapy/core/aviation/: airline_otp.py  constants.py  lookup.py
src/btsdatapy/core/aviation/airline_otp/: constants.py  models.py
src/btsdatapy/core/aviation/lookup/: constants.py
src/btsdatapy/core/lookups/: lookups.json
src/btsdatapy/core/lookups/aviation/: lookups.json
src/btsdatapy/core/lookups/aviation/airline_otp/: lookups.json
src/btsdatapy/core/models/: config.py  request.py  requests.py  templates.py
src/btsdatapy/core/services/: clients.py  fetch.py
src/btsdatapy/core/tables/aviation/airline_otp/: reporting_carrier_otp.json
src/btsdatapy/core/utils/: cache.py  dates.py
tests/test_core/: test_cache.py  test_clients.py  test_utils.py
tests/test_core/test_services/: test_clients.py  test_fetch.py
tests/test_core/test_utils/: test_cache.py  test_dates.py  test_obfuscation.py
