[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project]
name = "btsdatapy"
version = "0.1.0"
description = "Python utilities for querying Bureau of Transportation Statistics (BTS) data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Adam Lynch", email = "adamclynch03@gmail.com"}
]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pandas>=2.0",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/adam42739/btsdatapy"
Repository = "https://github.com/adam42739/btsdatapy"
Issues = "https://github.com/adam42739/btsdatapy/issues"

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "I"]
fix = true

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pre-commit]
config = ".pre-commit-config.yaml"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
